<resources>
    <string name="app_name">Journal</string>
    <string name="title_text">Self. Graditude. Journal.</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="ot_text">Or</string>
    <string name="create_text">CREATE ACCOUNT</string>
    <string name="username_hint">Username</string>
    <string name="post_title">Title</string>
    <string name="thoughts">Your thoughts</string>
    <string name="save_button">Save</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \"+\" icon above!</string>
    <string name="title">Title</string>
    <string name="thoughts_cardview">Thoughts...</string>
    <string name="date_created_cardview">Date Created</string>
    <string name="journal_row_username_textview">journal row username</string>
    <string name="today_text_view_activity_post_journal">Today</string>
</resources>
