<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/email_sing_in_button"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/login_text"
            android:layout_width="match_parent"
            android:background="#00FFFFFF"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/ot_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/create_acct_button_login"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/create_text"
            android:layout_width="match_parent"
            android:background="#00FFFFFF"

            android:textStyle="bold"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>