<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/journal_image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/image_two"
            android:adjustViewBounds="true"
            android:cropToPadding="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/journal_title_list"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/journal_thought_list"
            android:padding="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/thoughts_cardview"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/date_created_cardview"
            android:textStyle="italic"
            android:id="@+id/journal_timestamp_list"/>


    </LinearLayout>
    
</androidx.cardview.widget.CardView>